# PMP

./: .bzrignore  .gitattributes  .gitignore  BUGS.txt  CHANGELOG.md  CMakeLists.txt  Notes on Qt 6.txt  README.md  README.txt  RELEASE PROCEDURE.md  STEPS-FOR-VCPKG.txt  Scrobbling-TODO.txt  TODOs.txt  connectedclient.cpp  connectedclient.h  create-x64-windows-release-zip.cmd  create_win32_release_zip.cmd  filedata.cpp  filedata.h  fixexecperm.sh  hash-main.cpp  hashid.cpp  hashid.h  main.cpp  player.cpp  player.h  queueentry.cpp  queueentry.h  remote-main.cpp  server-main.cpp  server.cpp  sourcecount.sh  windist.sh
src/: CMakeLists.txt
src/app-icon/: generate-app-icon-ico.cmd
src/client/: abstractqueuemonitor.h  authenticationcontroller.h  authenticationcontrollerimpl.cpp  authenticationcontrollerimpl.h  clientmetatypes.cpp  clientserverinterface.cpp  clientserverinterface.h  collectionfetcher.h  collectiontrackinfo.h  collectionwatcher.h  collectionwatcherimpl.cpp  collectionwatcherimpl.h  compatibilityinterface.h  compatibilityinterfacecontroller.h  compatibilityinterfacecontrollerimpl.cpp  compatibilityinterfacecontrollerimpl.h  compatibilityinterfaceimpl.cpp  compatibilityinterfaceimpl.h  compatibilityinterfaceviewcreator.h  currenttrackmonitor.h  currenttrackmonitorimpl.cpp  currenttrackmonitorimpl.h  dynamicmodecontroller.h  dynamicmodecontrollerimpl.cpp  dynamicmodecontrollerimpl.h  generalcontroller.h  generalcontrollerimpl.cpp  generalcontrollerimpl.h  historycontroller.h  historycontrollerimpl.cpp  historycontrollerimpl.h  historyentry.h  localhashid.h  localhashidrepository.cpp  localhashidrepository.h  playercontroller.h  playercontrollerimpl.cpp  playercontrollerimpl.h  queuecontroller.h  queuecontrollerimpl.cpp  (+27 more)
src/cmd-remote/: administrativecommands.cpp  administrativecommands.h  client.cpp  client.h  cmd-remote-main.cpp  command.cpp  command.h  commandbase.cpp  commandbase.h  commandlineclient.cpp  commandlineclient.h  commandparser.cpp  commandparser.h  commands.cpp  commands.h  console.cpp  console.h  historycommands.cpp  historycommands.h  miscellaneouscommands.cpp  miscellaneouscommands.h  playercommands.cpp  playercommands.h  queuecommands.cpp  queuecommands.h  scrobblingcommands.cpp  scrobblingcommands.h  winres.rc.in
src/common/: abstracthandle.h  abstractqueuemonitor.h  async.h  audiodata.cpp  audiodata.h  authenticationcontroller.h  authenticationcontrollerimpl.cpp  authenticationcontrollerimpl.h  clientserverinterface.cpp  clientserverinterface.h  collectionfetcher.h  collectiontrackinfo.cpp  collectiontrackinfo.h  collectionwatcher.h  collectionwatcherimpl.cpp  collectionwatcherimpl.h  commonmetatypes.cpp  compatibilityinterface.h  compatibilityinterfacecontroller.h  compatibilityinterfacecontrollerimpl.cpp  compatibilityinterfacecontrollerimpl.h  compatibilityinterfaceimpl.cpp  compatibilityinterfaceimpl.h  compatibilityinterfaceviewcreator.h  compatibilityui.h  concurrent.cpp  concurrent.h  concurrentinternals.cpp  concurrentinternals.h  containerutil.h  currenttrackmonitor.h  currenttrackmonitorimpl.cpp  currenttrackmonitorimpl.h  disconnectreason.h  dynamicmodecontroller.h  dynamicmodecontrollerimpl.cpp  dynamicmodecontrollerimpl.h  fileanalyzer.cpp  fileanalyzer.h  filedata.cpp  (+94 more)
src/desktop-remote/: Play.kra  collectiontablemodel.cpp  collectiontablemodel.h  collectionwidget.cpp  colors.cpp  colors.h  colorswitcher.cpp  colorswitcher.h  connectionwidget.cpp  connectionwidget.h  delayedstartdialog.cpp  delayedstartdialog.h  delayedstartnotification.h  desktop-remote-main.cpp  desktop-remote-metatypes.cpp  dynamicmodeparametersdialog.cpp  dynamicmodeparametersdialog.ui  historymodel.cpp  loginwidget.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.qrc  notificationbar.h  playerhistorymodel.cpp  playerhistorymodel.h  precisetrackprogressmonitor.cpp  precisetrackprogressmonitor.h  queuemodel.cpp  scoreformatdelegate.cpp  scoreformatdelegate.h  scrobblingauthenticationdialog.cpp  scrobblingauthenticationdialog.h  scrobblingauthenticationdialog.ui  searching.cpp  searching.h  trackinfodialog.cpp  trackinfodialog.h  (+10 more)
src/gui-remote/: Pause.kra  Skip.kra  abstractqueuemonitor.cpp  abstractqueuemonitor.h  autopersonalmodeaction.cpp  autopersonalmodeaction.h  clickablelabel.cpp  clickablelabel.h  collectiontablemodel.cpp  collectiontablemodel.h  collectionwidget.cpp  collectionwidget.h  collectionwidget.ui  colors.cpp  colors.h  colorswitcher.cpp  colorswitcher.h  compatibilityinterfaceview.cpp  compatibilityinterfaceview.h  connectionwidget.cpp  connectionwidget.h  connectionwidget.ui  currenttrackmonitor.cpp  currenttrackmonitor.h  delayedstartdialog.cpp  delayedstartdialog.h  delayedstartdialog.ui  delayedstartnotification.cpp  delayedstartnotification.h  dynamicmodeparametersdialog.cpp  dynamicmodeparametersdialog.h  dynamicmodeparametersdialog.ui  gui-remote-main.cpp  gui-remote-metatypes.cpp  historymodel.cpp  historymodel.h  loginwidget.cpp  (+48 more)
testing/: CMakeLists.txt  hash_test.cpp  noise.flac  test_commandparser.cpp  test_commandparser.h  test_filehash.cpp  test_filehash.h  test_hashrelations.cpp  test_hashrelations.h  test_networkprotocol.h  test_networkutil.cpp  test_networkutil.h  test_nullable.cpp  test_nullable.h  test_obfuscator.cpp  test_obfuscator.h  test_passwordstrengthevaluator.h  test_scrobbler.cpp  test_scrobbler.h  test_sortedcollectiontablemodel.cpp  test_sortedcollectiontablemodel.h  test_tokenencoder.cpp  test_tokenencoder.h  test_tribool.cpp  test_util.cpp  test_util.h  testutil.cpp  testutil.h  tone.flac
tests/: CMakeLists.txt  hash_test.cpp  test_filehash.cpp  test_filehash.h  test_networkprotocol.cpp  test_networkprotocol.h  test_networkutil.cpp  test_networkutil.h  test_nullable.cpp  test_nullable.h  test_obfuscator.cpp  test_passwordstrengthevaluator.cpp  test_scrobbler.cpp  test_scrobbler.h  test_searchutil.cpp  test_searchutil.h  test_sortedcollectiontablemodel.cpp  test_sortedcollectiontablemodel.h  test_tokenencoder.cpp  test_tokenencoder.h  test_tribool.h  test_util.h
(+201 files in other folders)
